--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>ch.rogerjaeggi</groupId>
     <artifactId>test</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <modules>
         <module>service</module>
         <module>web</module>
@@ -21,7 +21,7 @@
         <connection>scm:git:ssh://github.com/jaeggir/intellijtest.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jaeggir/intellijtest.git</developerConnection>
         <url>https://github.com/jaeggir/intellijtest</url>
-        <tag>test-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
@@ -48,7 +48,7 @@
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>web</artifactId>
-                <version>1.0</version>
+                <version>1.1-SNAPSHOT</version>
                 <type>war</type>
             </dependency>
 
