--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.rogerjaeggi</groupId>
     <artifactId>test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
     <modules>
         <module>service</module>
         <module>web</module>
@@ -23,7 +21,7 @@
         <connection>scm:git:ssh://github.com/jaeggir/intellijtest.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jaeggir/intellijtest.git</developerConnection>
         <url>https://github.com/jaeggir/intellijtest</url>
-        <tag>HEAD</tag>
+        <tag>test-1.1</tag>
     </scm>
 
     <properties>
@@ -66,7 +64,7 @@
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>web</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.1</version>
                 <type>war</type>
             </dependency>
 
