--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>service</module>
         <module>web</module>
     </modules>
+    <name>${project.artifactId}</name>
 
     <packaging>pom</packaging>
 
@@ -64,7 +65,7 @@
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>web</artifactId>
-                <version>1.3-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <type>war</type>
             </dependency>
 
