--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>web</artifactId>
+    <name>${project.artifactId}</name>
 
     <packaging>war</packaging>
 
