--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>ch.rogerjaeggi</groupId>
     <artifactId>test</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <modules>
         <module>service</module>
         <module>web</module>
@@ -22,7 +22,7 @@
         <connection>scm:git:ssh://github.com/jaeggir/intellijtest.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jaeggir/intellijtest.git</developerConnection>
         <url>https://github.com/jaeggir/intellijtest</url>
-        <tag>HEAD</tag>
+        <tag>test-1.3</tag>
     </scm>
 
     <properties>
