--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,12 @@
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>service</artifactId>
-                <version>${project.version}</version>
+                <version>1.4-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>web</artifactId>
-                <version>${project.version}</version>
+                <version>1.4-SNAPSHOT</version>
                 <type>war</type>
             </dependency>
 
