--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>ch.rogerjaeggi</groupId>
     <artifactId>test</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
     <modules>
         <module>service</module>
         <module>web</module>
@@ -21,7 +21,7 @@
         <connection>scm:git:ssh://github.com/jaeggir/intellijtest.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jaeggir/intellijtest.git</developerConnection>
         <url>https://github.com/jaeggir/intellijtest</url>
-        <tag>HEAD</tag>
+        <tag>test-1.6</tag>
     </scm>
 
     <properties>
@@ -59,12 +59,12 @@
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>service</artifactId>
-                <version>1.6-SNAPSHOT</version>
+                <version>1.6</version>
             </dependency>
             <dependency>
                 <groupId>ch.rogerjaeggi</groupId>
                 <artifactId>web</artifactId>
-                <version>1.6-SNAPSHOT</version>
+                <version>1.6</version>
                 <type>war</type>
             </dependency>
 
